--- a/chinese/moettf/Makefile
+++ b/chinese/moettf/Makefile
@@ -2,7 +2,7 @@ PORTNAME=	moettf
 PORTVERSION=	2.0
 PORTREVISION=	7
 CATEGORIES=	chinese x11-fonts
-MASTER_SITES=	LOCAL/marino/zh-moettf
+MASTER_SITES=	FREEBSD_LOCAL/marino/zh-moettf
 DISTFILES=	edustds1.exe edustds2.exe edustd-15.exe \
 		kai-pc.ttf moe_kai.ttf moe_sung.ttf
 DIST_SUBDIR=	zh-moettf
