--- a/deskutils/gnome-characters/Makefile
+++ b/deskutils/gnome-characters/Makefile
@@ -28,4 +28,6 @@ BINARY_ALIAS=	python3=${PYTHON_VERSION}
 
 GLIB_SCHEMAS=	org.gnome.Characters.gschema.xml
 
+NO_TEST=	yes
+
 .include <bsd.port.mk>
