--- a/ports-mgmt/mport-manager/files/mport-manager.desktop
+++ b/ports-mgmt/mport-manager/files/mport-manager.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=mport Package Manager
 Comment=MidnightBSD Package Manager
-Exec=gksudo mport-manager
+Exec=pkexec /usr/local/bin/mport-manager
 Icon=icon
 Terminal=false
 Type=Application
