--- a/devel/jetbrains-restarter/Makefile
+++ b/devel/jetbrains-restarter/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	restarter
-DISTVERSION=	242.23726.38
-PORTREVISION=	0
+DISTVERSION=	2025.2.2
+PORTREVISION=	3
 CATEGORIES=	devel
 PKGNAMEPREFIX=	jetbrains-
 DIST_SUBDIR=	jetbrains
@@ -12,14 +12,14 @@ WWW=		https://github.com/JetBrains/intellij-community/tree/master/native/restart
 LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/../../LICENSE.txt
 
-ONLY_FOR_ARCHS=	aarch64 amd64 powerpc64le
+ONLY_FOR_ARCHS=	amd64
 
 USES=		cargo
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	JetBrains
 GH_PROJECT=	intellij-community
-GH_TAGNAME=	idea/242.23726.38
+GH_TAGNAME=	idea/2025.2.2
 
 DATADIR=	${PREFIX}/share/jetbrains/${PORTNAME}
 WRKSRC_SUBDIR=	native/restarter
@@ -28,7 +28,7 @@ PLIST_FILES=	share/jetbrains/${PORTNAME}/restarter
 do-install:
 	${MKDIR} ${STAGEDIR}${DATADIR}
 	${INSTALL_PROGRAM} \
-		${CARGO_TARGET_DIR}/*/restarter \
+		${CARGO_TARGET_DIR}/x86_64-unknown-freebsd/*/restarter \
 		${STAGEDIR}${DATADIR}
 
 post-install:
