--- a/x11/viewres/Makefile
+++ b/x11/viewres/Makefile
@@ -1,13 +1,15 @@
 PORTNAME=	viewres
-PORTVERSION=	1.0.6
+DISTVERSION=	1.0.8
 CATEGORIES=	x11
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Graphical class browser for Xt
+WWW=		https://gitlab.freedesktop.org/xorg/app/viewres
 
 LICENSE=	mit
+LICENSE_FILE=	${WRKSRC}/COPYING
 
-USES=		xorg xorg-cat:app
-USE_XORG=	x11 xaw xmu xt
+USES=		tar:xz xorg xorg-cat:app
+USE_XORG=	x11 xaw xmu xorgproto xt
 
 .include <bsd.port.mk>
