--- a/devel/libburn/Makefile
+++ b/devel/libburn/Makefile
@@ -1,12 +1,11 @@
-
-
 PORTNAME=	libburn
-PORTVERSION=	1.5.4
+PORTVERSION=	1.5.6
 CATEGORIES=	devel
 MASTER_SITES=	http://files.libburnia-project.org/releases/
 
 MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Libburnia library to read/write optical discs
+WWW=		https://dev.lovelyhq.com/libburnia/web/wiki/Libburn
 
 LICENSE=	gpl2
 LICENSE_FILE=	${WRKSRC}/COPYING
