--- a/devel/lndir/Makefile
+++ b/devel/lndir/Makefile
@@ -1,19 +1,16 @@
-# New ports collection makefile for:	lndir
-# Date Created:				16 Oct 2007
-# Whom:					Lucas Holt <luke@MidnightBSD.org>
-
 PORTNAME=	lndir
-PORTVERSION=	1.0.4
+DISTVERSION=	1.0.5
 CATEGORIES=	devel
-DISTFILES=      ${PORTNAME}-${PORTVERSION}.tar.xz
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Create a shadow directory of symbolic links to another directory tree
+WWW=		https://gitlab.freedesktop.org/xorg/util/lndir/
 
 LICENSE=	mit
+LICENSE_FILE=	${WRKSRC}/COPYING
 
+USES=		tar:xz xorg xorg-cat:util
 USE_XORG=	xorgproto
-USES=		xorg xorg-cat:util tar:xz
 
 PLIST_FILES=	bin/lndir \
 		share/man/man1/lndir.1.gz
