--- a/devel/zziplib/Makefile
+++ b/devel/zziplib/Makefile
@@ -1,6 +1,7 @@
 PORTNAME=	zziplib
-PORTVERSION=	0.13.79
+PORTVERSION=	0.13.80
 DISTVERSIONPREFIX=	v
+PORTREVISION=	1
 CATEGORIES=	devel
 
 MAINTAINER=	ports@MidnightBSD.org
@@ -14,11 +15,22 @@ LICENSE_FILE_MPL11=	${WRKSRC}/docs/COPYING.MPL
 
 BUILD_DEPENDS=	bash:shells/bash
 
-USES=		cmake compiler:c11 cpe pathfix
-
-CMAKE_OFF=	FORTIFY MSVC_STATIC_RUNTIME ZZIP_COMPAT ZZIP_LIBLATEST ZZIP_LIBTOOL
-CMAKE_ON=	BUILD_SHARED_LIBS ZZIP_PKGCONFIG ZZIPBINS ZZIPFSEEKO ZZIPMMAPPED ZZIPWRAP
 NO_TEST=	yes
+
+USES=		cmake compiler:c11 cpe
+
+CMAKE_OFF=	FORTIFY \
+		MSVC_STATIC_RUNTIME \
+		ZZIP_COMPAT \
+		ZZIP_LIBLATEST \
+		ZZIP_LIBTOOL
+CMAKE_ON=	BUILD_SHARED_LIBS \
+		ZZIP_PKGCONFIG \
+		ZZIPBINS \
+		ZZIPFSEEKO \
+		ZZIPMMAPPED \
+		ZZIPWRAP
+TEST_TARGET=	check
 USE_LDCONFIG=	yes
 
 PLIST_SUB=	SHLIB_VER=${PORTVERSION:R:E}.0.${PORTVERSION:E}
