--- a/x11/ico/Makefile
+++ b/x11/ico/Makefile
@@ -1,14 +1,16 @@
 PORTNAME=	ico
-PORTVERSION=	1.0.5
+DISTVERSION=	1.0.6
 CATEGORIES=	x11
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Displays a wire-frame rotating plyhedron
+WWW=		https://gitlab.freedesktop.org/xorg/app/ico
 
 LICENSE=	mit
+LICENSE_FILE=	${WRKSRC}/COPYING
 
-USES=		xorg xorg-cat:app
-USE_XORG=	x11
+USES=		tar:xz xorg xorg-cat:app
+USE_XORG=	x11 xorgproto
 
 PLIST_FILES=	bin/ico share/man/man1/ico.1.gz
 
