--- a/x11/fstobdf/Makefile
+++ b/x11/fstobdf/Makefile
@@ -1,14 +1,16 @@
 PORTNAME=	fstobdf
-PORTVERSION=	1.0.6
+DISTVERSION=	1.0.7
 CATEGORIES=	x11
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Generate BDF font from X font server
+WWW=		https://gitlab.freedesktop.org/xorg/app/fstobdf
 
 LICENSE=	mit
+LICENSE_FILE=	${WRKSRC}/COPYING
 
-USES=		xorg xorg-cat:app
-USE_XORG=	x11 libfs
+USES=		tar:xz xorg xorg-cat:app
+USE_XORG=	libfs x11 xorgproto
 
 PLIST_FILES=	bin/fstobdf share/man/man1/fstobdf.1.gz
 
