--- a/devel/kf6-kunitconversion/Makefile
+++ b/devel/kf6-kunitconversion/Makefile
@@ -8,6 +8,8 @@ MAINTAINER=	ports@MidnightBSD.org
 USES=		cmake gettext kde:6 kfhack qt:6 tar:xz
 USE_KDE=	i18n \
 		ecm:build
-USE_QT=		base
+USE_QT=		base tools:build
+
+CMAKE_OFF=	BUILD_PYTHON_BINDINGS
 
 .include <bsd.port.mk>
