--- a/x11-toolkits/fltk/Makefile
+++ b/x11-toolkits/fltk/Makefile
@@ -1,6 +1,5 @@
 PORTNAME=	fltk
-PORTVERSION=	1.3.8
-PORTREVISION=	1
+PORTVERSION=	1.3.10
 CATEGORIES=	x11-toolkits
 MASTER_SITES=	https://www.fltk.org/pub/${PORTNAME}/${PORTVERSION}/
 DISTNAME=	${PORTNAME}-${PORTVERSION}-source
@@ -15,37 +14,33 @@ LICENSE_FILE=	${WRKSRC}/COPYING
 LIB_DEPENDS=	libpng.so:graphics/png \
 		libfontconfig.so:x11-fonts/fontconfig
 
-USES=		cpe gettext-runtime gl jpeg localbase pkgconfig tar:bz2 xorg
-CPE_VENDOR=	fltk_project
+USES=		cpe gl jpeg localbase pkgconfig tar:bz2 xorg
 USE_XORG=	x11 xcursor xext xfixes xft xinerama xrender
 USE_GL=		gl glu
 USE_LDCONFIG=	yes
 GNU_CONFIGURE=	yes
 CONFIGURE_ARGS=	--enable-shared
 CONFIGURE_ENV=	NROFF=echo
+CPE_VENDOR=	fltk_project
 
 WRKSRC=		${WRKDIR}/${PORTNAME}-${PORTVERSION}
 
 PORTEXAMPLES=	*
 
-OPTIONS_DEFINE=	EXAMPLES
+OPTIONS_DEFINE=	CAIRO EXAMPLES
+OPTIONS_SUB=	yes
+
+CAIRO_USES=	gnome
+CAIRO_USE=	GNOME=cairo XORG=pixman
+CAIRO_CONFIGURE_ON=	--enable-cairo
 
 post-patch: .SILENT
-	prefix="${PREFIX}" ; plength=$$(($${#prefix}+10)) ; \
-	${REINPLACE_CMD} -e "\|/etc/fltk|{s||${PREFIX}&|;s|10|$${plength}|;}" \
+	prefix="${PREFIX}" ; fplen=$$(($${#prefix}+10)) ; \
+	${REINPLACE_CMD} -e "\|/etc/fltk|{s||${PREFIX}&|;s|10|$${fplen}|;}" \
 		${WRKSRC}/src/Fl_Preferences.cxx
 	${REINPLACE_CMD} -e 's,$$(docdir)/examples,${EXAMPLESDIR},' \
 		${WRKSRC}/test/Makefile
-	${REINPLACE_CMD} -e '/^INSTALL_BIN/s,-m,${STRIP} &, ; \
+	${REINPLACE_CMD} -e '/^INSTALL_[BL]I/s,-m,${STRIP} &, ; \
 		s,^\.SILENT,#&,' ${WRKSRC}/makeinclude.in
-	${REINPLACE_CMD} -E \
-		's,(.*)LDFLAGS(.*)LINKSHARED(.*),\1LINKSHARED\2LDFLAGS\3,' \
-			${WRKSRC}/fluid/Makefile
-
-post-install:
-.for x in fltk fltk_forms fltk_gl fltk_images
-	${LN} -sf lib${x}.so.${PORTVERSION:R} \
-		${STAGEDIR}${PREFIX}/lib/lib${x}.so.1
-.endfor
 
 .include <bsd.port.mk>
