--- a/x11-toolkits/libadwaita/Makefile
+++ b/x11-toolkits/libadwaita/Makefile
@@ -1,11 +1,11 @@
 PORTNAME=	libadwaita
-PORTVERSION=	1.6.0
+PORTVERSION=	1.7.7
 CATEGORIES=	x11-toolkits
 MASTER_SITES=	GNOME
 
 MAINTAINER=	ports@MidnightBSD.org
-COMMENT=	Building blocks for modern GNOME applications
-WWW=		https://www.gtk.org/
+COMMENT=	Building blocks for modern adaptive GNOME applications
+WWW=		https://gitlab.gnome.org/GNOME/libadwaita
 
 LICENSE=	lgpl2.1+
 LICENSE_FILE=	${WRKSRC}/COPYING
@@ -15,10 +15,12 @@ LIB_DEPENDS=	libappstream.so:devel/appstream \
 		libfribidi.so:converters/fribidi \
 		libgraphene-1.0.so:graphics/graphene
 
-USES=		gettext gnome meson ninja pkgconfig tar:xz vala:build
+USES=		gettext-tools gnome meson ninja pkgconfig python:build \
+		shebangfix tar:xz vala:build
 USE_GNOME=	cairo gdkpixbuf gtk40 introspection:build
+SHEBANG_FILES=	src/gen-public-types.py
 
-OPTIONS_DEFINE=	DOCS
+OPTIONS_DEFINE=	DOCS EXAMPLES
 
 DOCS_BUILD_DEPENDS=	gi-docgen:textproc/py-gi-docgen
 DOCS_MESON_TRUE=	gtk_doc
