--- a/deskutils/plasma6-xdg-desktop-portal-kde/Makefile
+++ b/deskutils/plasma6-xdg-desktop-portal-kde/Makefile
@@ -9,6 +9,7 @@ BUILD_DEPENDS=	${LOCALBASE}/include/linux/input-event-codes.h:devel/evdev-proto 
 		wayland-protocols>=0:graphics/wayland-protocols
 LIB_DEPENDS=	libwayland-client.so:graphics/wayland \
 		libxkbcommon.so:x11/libxkbcommon
+RUN_DEPENDS=	xdg-desktop-portal>0:deskutils/xdg-desktop-portal
 
 USES=		cmake gettext gl kde:6 pkgconfig qt:6 tar:xz xorg
 USE_KDE=	bookmarks completion config coreaddons globalaccel guiaddons \
@@ -19,7 +20,5 @@ USE_KDE=	bookmarks completion config coreaddons globalaccel guiaddons \
 USE_QT=		base declarative wayland
 USE_XORG=	x11
 USE_GL=		gl opengl
-
-CMAKE_ARGS=	-DQT_MAJOR_VERSION=6
 
 .include <bsd.port.mk>
