--- a/converters/dos2unix/Makefile
+++ b/converters/dos2unix/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	dos2unix
-DISTVERSION=	7.5.2
+DISTVERSION=	7.5.3
 CATEGORIES=	converters
 MASTER_SITES=	SF \
 		https://waterlan.home.xs4all.nl/dos2unix/
@@ -18,10 +18,12 @@ MAKE_ARGS=	docsubdir="${PORTNAME}" \
 
 CONFLICTS_INSTALL=	unix2dos
 
-OPTIONS_DEFINE=	DOCS
+OPTIONS_DEFINE=	DOCS MANPAGES NLS
+OPTIONS_DEFAULT=	MANPAGES
 OPTIONS_SUB=	yes
 
-MAKE_ARGS+=	ENABLE_NLS=
+NLS_USES=		gettext
+NLS_MAKE_ARGS_OFF=	ENABLE_NLS=
 
 post-install:
 	${STRIP_CMD} ${STAGEDIR}${PREFIX}/bin/dos2unix
