--- a/benchmarks/Makefile
+++ b/benchmarks/Makefile
@@ -1,46 +1,47 @@
-COMMENT = Benchmarking tools
+    COMMENT = Benchmarking tools
 
-SUBDIR += autobench
-SUBDIR += blogbench
-SUBDIR += bonnie
-SUBDIR += compiler-benchmark
-SUBDIR += dkftpbench
-SUBDIR += fhourstones
-SUBDIR += fio
-SUBDIR += flops
-SUBDIR += gtkperf
-SUBDIR += hey
-SUBDIR += httperf
-SUBDIR += iozone
-SUBDIR += iozone21
-SUBDIR += iperf
-SUBDIR += iperf3
-SUBDIR += libmicro
-SUBDIR += linux-gputest
-SUBDIR += linux-vdbench
-SUBDIR += lmbench
-SUBDIR += lzbench
-SUBDIR += netio
-SUBDIR += netperf
-SUBDIR += netpipe
-SUBDIR += nttcp
-SUBDIR += pathrate
-SUBDIR += perftest
-SUBDIR += phoronix-test-suite
-SUBDIR += raidtest
-SUBDIR += ramspeed
-SUBDIR += rubygem-benchmark
-SUBDIR += scimark2c
-SUBDIR += scimark4c
-SUBDIR += shellbench
-SUBDIR += siege
-SUBDIR += slowloris
-SUBDIR += sysbench
-SUBDIR += ttcp
-SUBDIR += unixbench
-SUBDIR += uperf
-SUBDIR += vkpeak
-SUBDIR += webbench
-SUBDIR += wrk
+    SUBDIR += autobench
+    SUBDIR += blogbench
+    SUBDIR += bonnie
+    SUBDIR += compiler-benchmark
+    SUBDIR += dkftpbench
+    SUBDIR += fhourstones
+    SUBDIR += fio
+    SUBDIR += flops
+    SUBDIR += gtkperf
+    SUBDIR += hey
+    SUBDIR += httperf
+    SUBDIR += iozone
+    SUBDIR += iozone21
+    SUBDIR += iperf
+    SUBDIR += iperf3
+    SUBDIR += libmicro
+    SUBDIR += linux-gputest
+    SUBDIR += linux-vdbench
+    SUBDIR += lmbench
+    SUBDIR += lzbench
+    SUBDIR += netio
+    SUBDIR += netperf
+    SUBDIR += netpipe
+    SUBDIR += nttcp
+    SUBDIR += pathrate
+    SUBDIR += perftest
+    SUBDIR += phoronix-test-suite
+    SUBDIR += raidtest
+    SUBDIR += ramspeed
+    SUBDIR += rubygem-benchmark
+    SUBDIR += scimark2c
+    SUBDIR += scimark4c
+    SUBDIR += shellbench
+    SUBDIR += siege
+    SUBDIR += slowloris
+    SUBDIR += smhasher
+    SUBDIR += sysbench
+    SUBDIR += ttcp
+    SUBDIR += unixbench
+    SUBDIR += uperf
+    SUBDIR += vkpeak
+    SUBDIR += webbench
+    SUBDIR += wrk
 
 .include <bsd.port.subdir.mk>
