--- a/x11-toolkits/vte3/Makefile
+++ b/x11-toolkits/vte3/Makefile
@@ -1,40 +1,42 @@
 PORTNAME=	vte
-PORTVERSION=	0.70.2
-PORTREVISION=	4
+PORTVERSION=	0.80.4
 CATEGORIES=	x11-toolkits gnome
 MASTER_SITES=	GNOME
 PKGNAMESUFFIX=	3
 DIST_SUBDIR=	gnome
 
-PATCH_SITES=	https://gitlab.gnome.org/GNOME/vte/-/commit/
-PATCHFILES+=	9b41cd101429.patch:-p1 #https://gitlab.gnome.org/GNOME/vte/-/issues/2618
-
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Terminal widget with improved accessibility and I18N support
-WWW=		https://wiki.gnome.org/Apps/Terminal/VTE
+WWW=		https://gitlab.gnome.org/GNOME/vte
 
-LICENSE=	lgpl2.1
+LICENSE=	gpl3+ lgpl3+
+LICENSE_COMB=	multi
 
-BUILD_DEPENDS=	bash:shells/bash
+BUILD_DEPENDS=	bash:shells/bash \
+		${LOCALBASE}/include/fast_float/fast_float.h:math/fast_float
 LIB_DEPENDS=	libpcre2-8.so:devel/pcre2 \
+		liblz4.so:archivers/liblz4 \
 		libicuuc.so:devel/icu
 
 PORTSCOUT=	limitw:1,even
 
-USES=		compiler:c++11-lang gettext gnome localbase meson \
-		pkgconfig python tar:xz vala:build
+USES=		compiler:c++20-lang gettext-tools gnome localbase meson \
+		pkgconfig python:build tar:xz vala:build
 USE_LDCONFIG=	yes
 USE_GNOME=	cairo gdkpixbuf gtk30 introspection:build
 
+# Disable build time flooding.
+CFLAGS+=	-Wno-cast-function-type-strict
 MESON_ARGS=	-Da11y=true \
 		-Dgir=true \
 		-Dgtk3=true \
 		-Dicu=true \
 		-D_systemd=false \
+		-Dglade=false \
 		-Dvapi=true
 
-# shlib version numbers come from gtk3/4 meson options, not from PYTHON_VER
-PLIST_SUB=	VERSION=2.91 VER3=3.91
+# VTE API minor version
+PLIST_SUB=	API_VER=91
 
 BINARY_ALIAS=	python3=${PYTHON_CMD}
 
@@ -43,26 +45,13 @@ OPTIONS_DEFAULT=FRIBIDI GNUTLS GTK4
 OPTIONS_SUB=	yes
 
 FRIBIDI_LIB_DEPENDS=	libfribidi.so:converters/fribidi
-FRIBIDI_MESON_OFF=	-Dfribidi=false
+FRIBIDI_MESON_TRUE=	fribidi
 
 GNUTLS_LIB_DEPENDS=	libgnutls.so:security/gnutls
-GNUTLS_MESON_OFF=	-Dgnutls=false
+GNUTLS_MESON_TRUE=	gnutls
 
+GTK4_LIB_DEPENDS=	libgraphene-1.0.so:graphics/graphene
 GTK4_USE=		GNOME=gtk40
-GTK4_MESON_ON=		-Dgtk4=true
+GTK4_MESON_TRUE=	gtk4
 
-.include <bsd.port.pre.mk>
-
-.if ${CHOSEN_COMPILER_TYPE} == clang
-CPP=		${LOCALBASE}/bin/clang-cpp${_LLVM_VERSION}
-CC=		${LOCALBASE}/bin/clang${_LLVM_VERSION}
-CXX=		${LOCALBASE}/bin/clang++${_LLVM_VERSION}
-BUILD_DEPENDS+=	llvm${_LLVM_VERSION}>=0:devel/llvm${_LLVM_VERSION}
-.if ${LLVM_DEFAULT} == 10
-_LLVM_VERSION=	11
-.else
-_LLVM_VERSION=	${LLVM_DEFAULT}
-.endif
-.endif
-
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
