--- a/x11/Makefile
+++ b/x11/Makefile
@@ -181,6 +181,7 @@
     SUBDIR += slurp
     SUBDIR += smproxy
     SUBDIR += startup-notification
+    SUBDIR += tecla
     SUBDIR += terminal.app
     SUBDIR += tint
     SUBDIR += viewres
