textproc/lua-lyaml: www

--- a/textproc/lua-lyaml/Makefile
+++ b/textproc/lua-lyaml/Makefile
@@ -1,5 +1,3 @@
-# Created by: Yarema <yds@Necessitu.de>
-
 PORTNAME=	lyaml
 PORTVERSION=	6.2.4
 DISTVERSIONPREFIX=v
@@ -8,6 +6,7 @@ PKGNAMEPREFIX=	${LUA_PKGNAMEPREFIX}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	LibYAML binding for Lua
+WWW=		https://GVVaughan.GitHub.io/lyaml/
 
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE
