net/kf5-kxmlrpcclient: add kfhack

--- a/net/kf5-kxmlrpcclient/Makefile
+++ b/net/kf5-kxmlrpcclient/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	net kde kde-frameworks
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	KF5 interaction with XMLRPC services
 
-USES=		cmake compiler:c++11-lib gettext kde:5 qt:5 tar:xz
+USES=		cmake compiler:c++11-lib gettext kde:5 kfhack qt:5 tar:xz
 USE_KDE=	config coreaddons i18n kio service \
 		doctools:build ecm:build
 USE_QT=		concurrent core dbus network xml \
