devel/qt5-designer: path

--- a/devel/qt5-designer/Makefile
+++ b/devel/qt5-designer/Makefile
@@ -34,5 +34,7 @@ post-install:
 	# The generated .pc file refers to a nonexistent other .pc file
 	${REINPLACE_CMD} -e '/^Requires/s/Qt5UiPlugin//' \
 		${STAGEDIR}${PREFIX}/libdata/pkgconfig/Qt5Designer.pc
+	${REINPLACE_CMD} 's|/../../../../|/../../../|g' \
+		${PREFIX}/lib/cmake/Qt5Designer/Qt5DesignerConfig.cmake
 
 .include <bsd.port.mk>
