--- a/sysutils/py-ansible-core/Makefile
+++ b/sysutils/py-ansible-core/Makefile
@@ -1,12 +1,15 @@
 PORTNAME=	ansible-core
-DISTVERSION=	2.15.6
+DISTVERSION=	2.18.7
 CATEGORIES=	sysutils python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
+DISTFILES=	${PORTNAME:R:S/-/_/}-${DISTVERSION}${EXTRACT_SUFX}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Radically simple IT automation
 WWW=		https://www.ansible.com/
+
+WRKSRC=		${WRKDIR}/${PORTNAME:R:S/-/_/}-${DISTVERSION}
 
 LICENSE=	gpl3+
 LICENSE_FILE=	${WRKSRC}/COPYING
@@ -17,17 +20,21 @@ RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}Jinja2>=3.0.0:devel/py-Jinja2@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}packaging>=0:devel/py-packaging@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}resolvelib>=0.5.3<1.1.0:devel/py-resolvelib@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}toml>0:textproc/py-toml@${PY_FLAVOR} \
+		${PYTHON_PKGNAMEPREFIX}passlib>0:security/py-passlib@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}pyyaml>=5.1:devel/py-pyyaml@${PY_FLAVOR}
 
-USES=		ansible:env cpe python:3.9+ shebangfix
+USES=		ansible:env cpe python shebangfix
 CPE_VENDOR=	redhat
 CPE_PRODUCT=	ansible
 USE_PYTHON=	autoplist concurrent cryptography pep517
 
 SHEBANG_REGEX=	[.]/test/.*[.]py
 
-CONFLICTS=	py*-ansible-base py*-ansible2 py-ansible-core211
+# Pass MAKE_ENV to TEST_ENV so that binary aliases via an updated PATH.
+TEST_ENV=	${MAKE_ENV}
 
+# The "python" binary alias is needed for the tests.
+BINARY_ALIAS=	python=${PYTHON_CMD}
 NO_ARCH=	yes
 NO_TEST=	yes
 
@@ -45,7 +52,7 @@ post-fake:
 	${FIND} ${FAKE_DESTDIR}${PREFIX}/bin -type l -name ansible-\* -lname ansible \
 		-execdir ${RLN} ansible-${PYTHON_VER} {} \;
 # USE_PYTHON=autoplist doesn't add this file to pkg-plist.
-	-${RM} ${FAKE_DESTDIR}${PYTHONPREFIX_SITELIBDIR}/ansible_test/_data/injector/ansible-inventory
+	${RM} ${STAGEDIR}${PYTHONPREFIX_SITELIBDIR}/ansible_test/_data/injector/ansible-inventory
 
 .include <bsd.port.mk>
 
