--- a/math/glm/Makefile
+++ b/math/glm/Makefile
@@ -1,10 +1,11 @@
 PORTNAME=	glm
-PORTVERSION=	0.9.8.5
+PORTVERSION=	1.0.2
 PORTEPOCH=	1
 CATEGORIES=	math graphics
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	C++ mathematics library for software based on the OpenGL GLSL
+WWW=		https://github.com/g-truc/glm
 
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/copying.txt
@@ -12,10 +13,12 @@ LICENSE_FILE=	${WRKSRC}/copying.txt
 USES=		cmake compiler:c++11-lang pkgconfig
 USE_GITHUB=	yes
 GH_ACCOUNT=	g-truc
-
 NO_ARCH=	yes
+CMAKE_OFF=	GLM_BUILD_LIBRARY
 
-OPTIONS_DEFINE=	TEST
+PORTDOCS=	*
+
+OPTIONS_DEFINE=	TEST DOCS
 TEST_CMAKE_BOOL=	GLM_TEST_ENABLE
 TEST_TEST_TARGET=	test
 
