math/py-numexpr: 2.10.1

--- a/math/py-numexpr/Makefile
+++ b/math/py-numexpr/Makefile
@@ -1,7 +1,8 @@
 PORTNAME=	numexpr
-PORTVERSION=	2.8.7
+PORTVERSION=	2.10.1
 CATEGORIES=	math python
-MASTER_SITES=	PYPI
+MASTER_SITES=	PYPI \
+		https://github.com/pydata/numexpr/releases/download/v${PORTVERSION}/
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	ports@MidnightBSD.org
@@ -14,7 +15,7 @@ LICENSE_FILE=	${WRKSRC}/LICENSE.txt
 BUILD_DEPENDS=	${RUN_DEPENDS}
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}numpy>=1.13.3,1:math/py-numpy@${PY_FLAVOR}
 
-USES=		dos2unix python:3.9+
+USES=		dos2unix python
 USE_PYTHON=	autoplist concurrent distutils
 
 post-install:
