--- a/devel/pylint/files/patch-pyproject.toml
+++ b/devel/pylint/files/patch-pyproject.toml
@@ -1,9 +1,21 @@
---- pyproject.toml.orig	2023-12-11 13:19:57 UTC
-+++ pyproject.toml
-@@ -1,5 +1,5 @@
+--- pyproject.toml.orig	2025-03-20 07:25:02.000000000 -0400
++++ pyproject.toml	2026-01-12 09:25:03.923284000 -0500
+@@ -1,15 +1,15 @@
  [build-system]
--requires = ["setuptools>=71.0.4"]
-+requires = ["setuptools>=62.6"]
  build-backend = "setuptools.build_meta"
  
+-requires = [ "setuptools>=71.0.4" ]
++requires = [ "setuptools>=62.0" ]
+ 
  [project]
+ name = "pylint"
+ description = "python code static checker"
+ readme = "README.rst"
+ keywords = [ "lint", "linter", "python", "static code analysis" ]
+-license = "GPL-2.0-or-later"
+-license-files = [ "LICENSE", "CONTRIBUTORS.txt" ]
++license = {text="GPL-2.0-or-later"}
++#license-files = [ "LICENSE", "CONTRIBUTORS.txt" ]
+ authors = [
+   { name = "Python Code Quality Authority", email = "code-quality@python.org" },
+ ]
