--- a/devel/py-trove-classifiers/Makefile
+++ b/devel/py-trove-classifiers/Makefile
@@ -1,8 +1,9 @@
 PORTNAME=	trove-classifiers
-PORTVERSION=	2023.10.18
+PORTVERSION=	2025.12.1.14
 CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
+DISTNAME=	trove_classifiers-${PORTVERSION}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Canonical source for classifiers on PyPI
