--- a/graphics/linux-rl9-qt5-qtsvg/Makefile
+++ b/graphics/linux-rl9-qt5-qtsvg/Makefile
@@ -9,7 +9,9 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Cross-platform application and UI framework, ${PKGNAMESUFFIX:S/-qt//g} (Rocky Linux ${LINUX_DIST_VER})
 WWW=		https://www.qt.io/
 
-LICENSE=	GPLv2+
+LICENSE=	gpl2+
+
+SKIP_FAKE_CHECK=        (.*sdpscanner|.*\.(so|9)$)
 
 USES=		linux:rl9
 USE_LDCONFIG=	yes
