--- a/security/Makefile
+++ b/security/Makefile
@@ -57,6 +57,7 @@
     SUBDIR += gnutls
     SUBDIR += go-cve-dictionary
     SUBDIR += gpgme
+    SUBDIR += gpgmepp
     SUBDIR += gpgme-cpp
     SUBDIR += gpgme-qt
     SUBDIR += gsasl
