add java 24 port

--- a/java/Makefile
+++ b/java/Makefile
@@ -63,6 +63,7 @@ SUBDIR += openjdk18-bin
 SUBDIR += openjdk19
 SUBDIR += openjdk20
 SUBDIR += openjdk21-bin
+SUBDIR += openjdk24-bin
 SUBDIR += openjfx14
 SUBDIR += phpeclipse
 SUBDIR += proguard
